# gemma-4-12b-realtime

./: .gitignore  README.md  config.yaml  gemma-4-12-realtime.py  gemma-4-12b-realtime.py  pyproject.toml  pyrightconfig.json  reachy-local-brain-plan.md  requirements.txt  serve-qwen-3.6-27b-vlm.sh
scripts/: asr_server.py  bench_latency.py  claude-websearch.sh  serve-qwen-3.6-27b-vlm.sh  tts_server.py
src/rlb/: __init__.py  bench.py  bus.py  cli.py  config.py  embodiment.py  robot.py  search.py  services.py  vision.py
src/rlb/audio/: __init__.py  asr.py  capture.py  stream.py  tts.py  vad.py
src/rlb/cognition/: __init__.py  orchestrator.py  prompt.py
src/rlb/inference/: __init__.py  client.py
src/rlb/motion/: __init__.py  controller.py  layers.py  pose.py
