[project]
name = "reachy-local-brain"
version = "0.1.0"
description = "Fully-local embodied assistant for Reachy Mini Lite, driven by Gemma 4 (audio+vision+text)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Robot SDK
    "reachy-mini>=1.2.10",
    # Bus / config / schemas
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "msgpack>=1.1",
    "pyzmq>=26.0",
    # Inference client
    "httpx>=0.28",
    # Audio
    "sounddevice>=0.5",
    "numpy>=2.0",
    # TTS
    "kokoro-onnx>=0.4",
    # CLI / logging
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
# Perception (face detection) — heavier, optional so Phase 0 stays light.
perception = [
    "mediapipe>=0.10",
    "opencv-python>=4.10",
]
# Voice activity detection.
vad = [
    "onnxruntime>=1.19",
]
# Simulation (MuJoCo backend smoke tests without hardware).
sim = [
    "mujoco>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
rlb = "rlb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlb"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
